tests/ui/span/E0046.stderr
error[E0046]: not all trait items implemented, missing: `foo`
  --> $DIR/E0046.rs:7:1
   |
LL |     fn foo();
   |     --------- `foo` from trait
...
LL | impl Foo for Bar {}
   | ^^^^^^^^^^^^^^^^ missing `foo` in implementation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
